[package]
name = "monitoring-client"
version = "0.1.0"
edition = "2018"

[dependencies]
rand = "0.6.1"
ed25519-dalek = "^0.8"
futures = "^0.1.26"
futures-timer = "0.1.1"
sha2 = "^0.7"
hex = "0.3.2"
serde_json = "^1.0.39"
serde = "^1.0.90"
serde_derive = "^1.0.90"
num-bigint = "0.2.2"
num-traits = "0.2"
chrono = "0.4.6"
reqwest = "0.9.7"
http = "0.1.17"

ton_sdk = { path = "../" }

tvm = { git = "ssh://git@github.com/tonlabs/sdk-emulator.git", branch = "dev", package = "tvm" }
ton_block = { git = "ssh://git@github.com/tonlabs/sdk-emulator.git", branch = "dev", package = "ton_block" }
